# python-project-template

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  README_template.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: gihub-ci.yml  main.yml
notebooks/: exploratory_notebook.ipynb
src/: python_project_template.py
tests/: test_python_project_template.py
