[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python_project_template"
version = "0.0.1"
description = "A Python project template."
readme = "README.md"
authors = [{name = "Jaco Verster", email = "versterrie@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "matplotlib",

]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest", "build", "black", "pre-commit"]
ci = ["pytest", "build"]

[project.urls]
Homepage = "https://github.com/jacoverster/python-project-template"
