[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python_project_template"
version = "0.0.1"
description = "A Python project template."
readme = "README.md"
authors = [{name = "Jaco Verster", email = "versterrie@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "matplotlib",
    "ipykernel",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest", "coverage", "ruff", "pre-commit", "rich"]
test = ["pytest", "coverage"]

[project.urls]
Homepage = "https://github.com/jacoverster/python-project-template"

[tool.ruff]
src = ["src"]
extend-include = ["*.ipynb"]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "SIM", # flake8-simplify
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
]
